--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,9 +5,9 @@
 } */
 
 img.logo_header {
-    width: 20%;
+    width: 25%;
 }
 
 .landing_header_head {
-    font-size: 25px;
+    font-size: 20px;
 }
